style: format code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           (!localStorage.getItem('theme') &&
             window.matchMedia('(prefers-color-scheme: dark)').matches),
       )
-      window.eltLoader = document.getElementById('appLoader')
+      window.loaderElement = document.getElementById('appLoader')
     </script>
     <script
       type="module"
