--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <script>
       document.documentElement.classList.toggle(
         'dark',
-        localStorage.getItem('theme') === 'dark' ||
-          (!localStorage.getItem('theme') &&
+        localStorage.getItem('theme-mode') === 'dark' ||
+          (!localStorage.getItem('theme-mode') &&
             window.matchMedia('(prefers-color-scheme: dark)').matches),
       )
       window.loaderElement = document.getElementById('appLoader')
-      window.loaderElement.style = `--clock-color: ${localStorage.getItem('color') || '#8e51ff'}`
+      window.loaderElement.style = `--clock-color: ${localStorage.getItem('theme-color') || '#8e51ff'}`
     </script>
     <script
       type="module"
